Updated cors for development